tests/code/pages/errors/error-with-print.tht


$a = []

>> 'This is a print'

$a = $a * 1



